--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ packages = [
 exclude = ["django_typer/tests"]
 
 [tool.poetry.dependencies]
-python = ">=3.7,<4.0"
+python = ">=3.9,<4.0"
 Django = ">=3.2,<5.0"
 typer = "^0.9.0"
 
@@ -55,7 +55,4 @@ pytest-cov = "^4.0.0"
 Sphinx = "^5.0.2"
 sphinx-rtd-theme = "^1.0.0"
 mypy = ">=0.991,<1.5"
-pylint = [
-    { version = "<3.0", markers = "python_version <= '3.7'" },
-    { version = "^3.0", markers = "python_version > '3.7'" },
-]
+pylint = '^3.0'
