--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -5,4 +5,4 @@ sphinxcontrib-htmlhelp==2.0.1; python_version >= "3.5"
 sphinxcontrib-jsmath==1.0.1; python_version >= "3.5"
 sphinxcontrib-qthelp==1.0.6; python_version >= "3.5"
 sphinxcontrib-serializinghtml==1.1.9; python_version >= "3.5"
-django-typer==0.1.0
+django-typer==0.1.0b
