--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,7 @@ jobs:
           poetry run pip install -U "${{ matrix.django-version }}"
       - name: Run Static Analysis
         run: |
+          poetry run black django_typer --check
           poetry run pylint django_typer
           poetry run mypy django_typer
           poetry run doc8 -q doc
