--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -92,5 +92,7 @@ jobs:
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }
       with:
         file: ./coverage.xml
