--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ exclude = ["django_typer/tests"]
 python = ">=3.9,<4.0"
 Django = ">=3.2,<6.0"
 typer = "^0.9.0"
+rich = ">=10.11.0,<14.0.0"  # this should track typer's rich dependency
 
 [tool.poetry.group.dev.dependencies]
 ipdb = "^0.13.13"
@@ -58,6 +59,10 @@ doc8 = "^1.1.1"
 aiohttp = "^3.9.1"
 readme-renderer = "^42.0"
 sphinxcontrib-typer = "^0.1.4"
+scikit-learn = "^1.3.2"
+
+[tool.poetry.extras]
+rich = ["rich"]
 
 [tool.mypy]
 # The mypy configurations: http://bit.ly/2zEl9WI
