autocompletion working for bash, zsh and powershell - fish still being stubborn

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,11 +38,15 @@ packages = [
 ]
 exclude = ["django_typer/tests"]
 
+[tool.poetry.scripts]
+django_complete = "django_typer.autocomplete:main"
+
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
 Django = ">=3.2,<6.0"
 typer = "^0.9.0"
 rich = ">=10.11.0,<14.0.0"  # this should track typer's rich dependency
+shellingham = "^1.5.4"
 
 [tool.poetry.group.dev.dependencies]
 ipdb = "^0.13.13"
