--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,15 +96,8 @@ ignore-path = "doc/_build"
 max-line-length = 100
 sphinx = true
 
-[isort]
-# isort configuration:
-# https://github.com/timothycrosley/isort/wiki/isort-Settings
-include_trailing_comma = true
-use_parentheses = true
-# See https://github.com/timothycrosley/isort#multi-line-output-modes
-multi_line_output = 3
-default_section = "FIRSTPARTY"
-line_length = 88
+[tool.isort]
+profile = "black"
 
 
 [tool.pytest.ini_options]
@@ -133,7 +126,6 @@ command_line = "-m pytest --cov=django_typer"
 
 
 [tool.black]
-line-length = 88
 target-version = ["py39", "py310", "py311", "py312"]
 include = '\.pyi?$'
 
@@ -151,4 +143,6 @@ ignore="tests"
 disable = [
     'R0903', # too few public methods - seriously?
     'W0613', # unused argument - unavoidable in generic base interfaces
+    'W0212', # access to a protected member of a client class - lots of monkey patches required here
+    'C0415', # imports outside top level. I put them where they need to be!
 ]
