--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -88,6 +88,7 @@ jobs:
         poetry run pip install -U "Django~=${{ matrix.django-version }}"
     - name: Run Unit Tests
       run: |
+        export NO_COLOR=1
         poetry run pytest
         mv .coverage py${{ matrix.python-version }}-dj${{ matrix.django-version }}.coverage
 
