--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,52 +1,8 @@
-name: test
+name: Test and Coverage
 
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
-
-  static-analysis:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        # run static analysis on bleeding and trailing edges
-        python-version: [ '3.9', '3.12' ]
-        django-version:
-          - 'Django~=3.2.0' # LTS April 2024
-          - 'Django~=4.2.0' # LTS April 2026
-        exclude:
-          - python-version: '3.9'
-            django-version: 'Django~=4.2.0'
-          - python-version: '3.12'
-            django-version: 'Django~=3.2.0'
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-      - name: Install Dependencies
-        run: |
-          poetry config virtualenvs.in-project true
-          poetry run pip install --upgrade pip
-          poetry install
-          poetry run pip install -U "${{ matrix.django-version }}"
-      - name: Run Static Analysis
-        run: |
-          poetry run black django_typer --check
-          poetry run pylint django_typer
-          poetry run mypy django_typer
-          poetry run doc8 -q doc
-          poetry check
-          poetry run pip check
-          poetry export --without-hashes --format=requirements.txt | poetry run safety check --stdin
-          poetry run python -m readme_renderer ./README.rst -o /tmp/README.html
 
   test:
     runs-on: ubuntu-latest
@@ -67,7 +23,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
       with:
         node-version: 18
     - name: Set up Python ${{ matrix.python-version }}
