--- a/pyproject.toml
+++ b/pyproject.toml
@@ -139,6 +139,8 @@ max-line-length = 88
 
 [tool.pylint.'DESIGN']
 max-args=30
+max-locals=30  # there are lots of options!
+max-module-lines=2000
 
 [tool.pylint.'MASTER']
 ignore="tests"
@@ -149,4 +151,7 @@ disable = [
     'W0613', # unused argument - unavoidable in generic base interfaces
     'W0212', # access to a protected member of a client class - lots of monkey patches required here
     'C0415', # imports outside top level. I put them where they need to be!
+    'C0413', # wrong import order. I put them where they need to be!
+    'C0411', # wrong import order. I put them where they need to be!
+    'W0603', # Using the global statement
 ]
