--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@ pylint = '^3.0'
 black = ">=23.12,<25.0"
 doc8 = "^1.1.1"
 aiohttp = "^3.9.1"
-readme-renderer = "^42.0"
+readme-renderer = {extras = ["md"], version = "^42.0"}
 sphinxcontrib-typer = "^0.1.4"
 scikit-learn = "^1.3.2"
 pytest-env = "^1.1.3"
