--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -93,9 +93,64 @@ jobs:
         name: coverage-linux-complete-py${{ matrix.python-version }}-dj${{ matrix.django-version }}
         path: linux-complete-py${{ matrix.python-version }}-dj${{ matrix.django-version }}.coverage
 
+  macos-shell-completion:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        python-version: ['3.9', '3.12']
+        django-version:
+          - '3.2' # LTS April 2024
+          - '5.0' # April 2025
+        exclude:
+          - python-version: '3.9'
+            django-version: '5.0'
+          - python-version: '3.12'
+            django-version: '3.2'
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install Poetry
+      uses: snok/install-poetry@v1
+      with:
+        virtualenvs-create: true
+        virtualenvs-in-project: true
+    - name: Install Homebrew and Zshell Completion
+      run: |
+        xcode-select --install
+        /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
+        brew install zsh-completions
+        echo "if type brew &>/dev/null; then" >> ~/.zshrc
+        echo "\tFPATH=~/.zfunc:$(brew --prefix)/share/zsh-completions:$FPATH" >> ~/.zshrc
+        echo "\tautoload -Uz compinit" >> ~/.zshrc
+        echo "\tcompinit" >> ~/.zshrc
+        echo "fi" >> ~/.zshrc
+        echo "fpath+=~/.zfunc" >> ~/.zshrc
+        
+    - name: Install Release Dependencies
+      run: |
+        poetry config virtualenvs.in-project true
+        poetry run pip install --upgrade pip
+        poetry install
+        poetry run pip install -U "Django~=${{ matrix.django-version }}"
+    - name: Run Unit Tests
+      run: |
+        poetry run pytest django_typer/tests/completion_tests.py
+        mv .coverage macos-complete-py${{ matrix.python-version }}-dj${{ matrix.django-version }}.coverage
+
+    - name: Store coverage files
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-macos-complete-py${{ matrix.python-version }}-dj${{ matrix.django-version }}
+        path: macos-complete-py${{ matrix.python-version }}-dj${{ matrix.django-version }}.coverage
+
 
   coverage-combine:
-    needs: [test] #, linux-shell-completion]
+    needs: [test, linux-shell-completion, macos-shell-completion]
     runs-on: ubuntu-latest
 
     steps:
@@ -128,7 +183,7 @@ jobs:
       - run: poetry run coverage xml
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.xml
