--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -114,13 +114,8 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
-      with:
-        virtualenvs-create: true
-        virtualenvs-in-project: true
     - name: Install Homebrew and Zshell Completion
-      shell: zsh
+      shell: zsh {0}
       run: |
         /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
         touch ~/.zshrc
@@ -138,6 +133,12 @@ jobs:
         rm -f ~/.zcompdump
         compinit
 
+    - name: Install Poetry
+      uses: snok/install-poetry@v1
+      with:
+        virtualenvs-create: true
+        virtualenvs-in-project: true
+
     - name: Install Release Dependencies
       run: |
         poetry config virtualenvs.in-project true
@@ -145,7 +146,7 @@ jobs:
         poetry install
         poetry run pip install -U "Django~=${{ matrix.django-version }}"
     - name: Run Unit Tests
-      shell: zsh
+      shell: zsh {0}
       run: |
         poetry run pytest django_typer/tests/completion_tests.py
         mv .coverage macos-complete-py${{ matrix.python-version }}-dj${{ matrix.django-version }}.coverage
