try fix macos actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -128,10 +128,8 @@ jobs:
         echo "  compinit" >> ~/.zshrc
         echo "fi" >> ~/.zshrc
         echo "fpath+=~/.zfunc" >> ~/.zshrc
-        cat ~/.zshrc
         source ~/.zshrc
-        rm -f ~/.zcompdump
-        compinit
+        rm -f ~/.zcompdump; compinit
 
     - name: Install Poetry
       uses: snok/install-poetry@v1
