--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -128,6 +128,7 @@ jobs:
         echo "  compinit" >> ~/.zshrc
         echo "fi" >> ~/.zshrc
         echo "fpath+=~/.zfunc" >> ~/.zshrc
+        source ~/.zshrc
 
     - name: Install Poetry
       uses: snok/install-poetry@v1
