--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,8 @@
 name: test
 
 on:
-  push:
-    branches:
-      - **
-  pull_request:
-    branches:
-      - **
+  push: # runs on everything
+  pull_request: # runs on everything
   workflow_dispatch:
     inputs:
       debug_enabled:
