try fix macos CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -150,9 +150,9 @@ jobs:
       shell: bash
       run: |
         brew install bash-completion@2
-        touch ~/.bash_profile
-        echo "[[ -r "$(brew --prefix)/etc/profile.d/bash_completion.sh" ]] && . "$(brew --prefix)/etc/profile.d/bash_completion.sh" || true" >> ~/.bash_profile
-        source ~/.bash_profile
+        touch ~/.bashrc
+        echo "\n[[ -r "$(brew --prefix)/etc/profile.d/bash_completion.sh" ]] && . "$(brew --prefix)/etc/profile.d/bash_completion.sh" || true" >> ~/.bash_profile
+        source ~/.bashrc
     - name: Install Poetry
       uses: snok/install-poetry@v1
       with:
