--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -121,6 +121,8 @@ jobs:
       uses: mxschmitt/action-tmate@v3
       with:
         detached: true
+      timeout-minutes: 15
+        
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
