try alt code cov config

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -222,5 +222,5 @@ jobs:
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
-      
+          files: ./coverage.xml
+          disable_search: true
