--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -117,11 +117,11 @@ jobs:
             django-version: '3.2'
 
     steps:
-    # - name: Setup tmate session
-    #   uses: mxschmitt/action-tmate@v3
-    #   with:
-    #     detached: true
-    #   timeout-minutes: 15
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+      with:
+        detached: true
+      timeout-minutes: 15
         
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
