--- a/pyproject.toml
+++ b/pyproject.toml
@@ -147,6 +147,7 @@ max-line-length = 88
 max-args=30
 max-locals=30  # there are lots of options!
 max-module-lines=2000
+max-attributes=20
 
 [tool.pylint.'MASTER']
 ignore="tests"
