--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,8 @@ jobs:
     - name: Run Unit Tests
       run: |
         poetry run pytest
+        pip uninstall -y rich
+        poetry run pytest
         mv .coverage py${{ matrix.python-version }}-dj${{ matrix.django-version }}.coverage
 
     - name: Store coverage files
