--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,7 +56,7 @@ jobs:
     - name: Run Unit Tests
       run: |
         poetry run pytest
-        pip uninstall -y rich
+        poetry run pip uninstall -y rich
         poetry run pytest --cov-append
         mv .coverage py${{ matrix.python-version }}-dj${{ matrix.django-version }}.coverage
 
