--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ classifiers = [
 packages = [
     { include = "django_typer" }
 ]
-exclude = ["django_typer/tests", "django_typer/locale"]
+exclude = ["django_typer/tests", "django_typer/examples", "django_typer/locale"]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
@@ -60,7 +60,7 @@ black = ">=23.12,<25.0"
 doc8 = "^1.1.1"
 aiohttp = "^3.9.1"
 readme-renderer = {extras = ["md"], version = "^42.0"}
-sphinxcontrib-typer = "^0.1.7"
+sphinxcontrib-typer = {extras = ["html", "pdf", "png"], version = "^0.1.8"}
 scikit-learn = "^1.3.2"
 pytest-env = "^1.1.3"
 
