--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "django-typer"
-version = "0.6.0b"
+version = "0.6.1b"
 description = "Use Typer to define the CLI for your Django management commands."
 authors = ["Brian Kohan <bckohan@gmail.com>"]
 license = "MIT"
@@ -43,8 +43,12 @@ exclude = ["django_typer/tests", "django_typer/examples", "django_typer/locale"]
 python = ">=3.8,<4.0"
 Django = ">=3.2,<6.0"
 click = "^8.0.0"
-typer = ">=0.9.0,<1.0"
-rich = ">=10.11.0,<14.0.0"  # this should track typer's rich dependency
+
+# typer's release history is full of breaking changes for minor versions
+# given the reliance on some of its private internals we peg the typer
+# version very strictly to bug fix releases for specific minor lines.
+typer = ">=0.9.0,<0.10.0"
+rich = { version = ">=10.11.0,<14.0.0", optional = true }  # this should track typer's rich dependency
 shellingham = ">=1.5.4"
 typing-extensions = { version = ">=3.7.4.3", python = "<3.9" }
 
@@ -67,7 +71,7 @@ aiohttp = "^3.9.1"
 readme-renderer = {extras = ["md"], version = "^42.0"}
 sphinxcontrib-typer = {extras = ["html", "pdf", "png"], version = "^0.1.11"}
 scikit-learn = "^1.0.0"
-pytest-env = "^1.1.3"
+pytest-env = "^1.0.0"
 numpy = [
     { version = ">=1.26", markers = "python_version > '3.8'" },
     { version = "<=1.24", markers = "python_version <= '3.8'" },
