--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,8 +48,14 @@ click = "^8.0.0"
 # given the reliance on some of its private internals we peg the typer
 # version very strictly to bug fix releases for specific minor lines.
 typer = ">=0.9.0,<0.10.0"
-rich = { version = ">=10.11.0,<14.0.0", optional = true }  # this should track typer's rich dependency
+
+# this should track typer's rich dependency, so long as our console
+# patches still work - so be sure to test on the low end of the range
+rich = { version = ">=10.11.0,<14.0.0", optional = true }
+
 shellingham = ">=1.5.4"
+
+# we need this on 3.8 for Annotated types
 typing-extensions = { version = ">=3.7.4.3", python = "<3.9" }
 
 
