--- a/doc/.readthedocs.yaml
+++ b/doc/.readthedocs.yaml
@@ -5,17 +5,23 @@
 # Required
 version: 2
 
+python:
+  version: 3.12
+  install:
+    - method: poetry
+      path: .
+  
 # Set the version of Python and other tools you might need
 build:
   os: ubuntu-22.04
-  tools:
-    python: "3.12"
-  jobs:
-    post_create_environment:
-      - pip install poetry
-      - poetry config virtualenvs.create false
-    post_install:
-      - poetry install
+  # tools:
+  #   python: "3.12"
+  # jobs:
+  #   post_create_environment:
+  #     - pip install poetry
+  #     - poetry config virtualenvs.create false
+  #   post_install:
+  #     - poetry install
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
