--- a/doc/.readthedocs.yaml
+++ b/doc/.readthedocs.yaml
@@ -12,7 +12,7 @@ build:
     python: "3.12"
   jobs:
     post_create_environment:
-      - pip install poetry
+      - pip install poetry==1.7.1  # 1.8 has a bug preventing this build from working
       - poetry config virtualenvs.create false
     post_install:
       - poetry install
